# zip-cracker

./: .gitignore  Cargo.toml  LICENSE.txt  readme.md
.github/workflows/: release.yml
cpp-realisation/: logging.cpp  main.cpp  parse_args.cpp
scripts/: install.ps1  install.sh
src/: functions.rs  main.rs
