[package]
name = "zip-cracker"
version = "0.1.0"
edition = "2021"
default-run = "main"

[[bin]]
name = "experiments"
path = "src/concurrent_experiments.rs"

[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
crossbeam-channel = "0.5.6"
zip = "0.6.3"
clap = "3.0.0-beta.2"
indicatif = "0.17.3"
num_cpus = "1.14.0"
rayon = "1.7.0"
