[package]
name = "zip-cracker"
version = "1.1.0"
edition = "2021"
default-run = "zip-cracker"

[[bin]]
name = "experiments"
path = "src/concurrent_experiments.rs"

[[bin]]
name = "zip-cracker"
path = "src/main.rs"

[dependencies]
crossbeam-channel = "0.5.6"
zip = "0.6.3"
clap = { version = "4.0", features = ["derive"] }
indicatif = "0.17.3"
num_cpus = "1.14.0"
rayon = "1.7.0"
